versioned_docs/version-2021.1.3/turma/ein2020-2ano.mdx
import { Grid } from "@site/src/components/Grid";
const data = {
  title: "EIN2020-2ANO",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: [
        {
          subject: "Processos de Fabr icação I - 1552",
          size: 2,
          teachers: [
            "Fábio Fernandes da Silva"
          ],
          classroom: "",
          students: "EIN2020-2ANO",
          time: "10:15 - 11:05"
        },
        {
          subject: "Geografia 2 - 177",
          size: 1,
          teachers: [
            "Jhones Donizetti Mendes"
          ],
          classroom: "",
          students: "EIN2020-2ANO",
          time: "09:25 - 10:15"
        },
        {
          subject: "Artes 2 - 166",
          size: 1,
          teachers: [
            "Josiane Paula Maltauro Lopes"
          ],
          classroom: "",
          students: "EIN2020-2ANO",
          time: "07:30 - 08:20"
        },
        {
          subject: "Filosofia 2 - 173",
          size: 1,
          teachers: [
            "Neomar Sandro Mignoni"
          ],
          classroom: "",
          students: "EIN2020-2ANO",
          time: "08:20 - 09:10"
        }
      ]
    },
    {
      dayName: "Terça-Feira",
      dayClasses: [
        {
          subject: "Biologia 2 - 168",
          size: 1,
          teachers: [
            "Eliana Peliçon Pereira Figueira"
          ],
          classroom: "",
          students: "EIN2020-2ANO",
          time: "09:25 - 10:15"
        },
        {
          subject: "Educação Física 2 - 170",
          size: 1,
          teachers: [
            "Franciele Fernandes Baliero"
          ],
          classroom: "",
          students: "EIN2020-2ANO",
          time: "07:30 - 08:20"
        },
        {
          subject: "Língua Portuguesa 2 - 183",
          size: 2,
          teachers: [
            "Kátia Cristiane Kobus Novaes"
          ],
          classroom: "",
          students: "EIN2020-2ANO",
          time: "10:15 - 11:05"
        },
        {
          subject: "Metrologia - 1550",
          size: 1,
          teachers: [
            "Sérgio Takahashi"
          ],
          classroom: "",
          students: "EIN2020-2ANO",
          time: "08:20 - 09:10"
        }
      ]
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: [
        {
          subject: "Sociologia 2 - 189",
          size: 1,
          teachers: [
            "Everaldo Lorensetti"
          ],
          classroom: "",
          students: "EIN2020-2ANO",
          time: "09:25 - 10:15"
        },
        {
          subject: "Sistemas Digi tais - 1553",
          size: 2,
          teachers: [
            "Guilherme Masquetti Pelz"
          ],
          classroom: "",
          students: "EIN2020-2ANO",
          time: "10:15 - 11:05"
        },
        {
          subject: "Matemática 2 - 185",
          size: 2,
          teachers: [
            "Mauro César de Souza Siena"
          ],
          classroom: "",
          students: "EIN2020-2ANO",
          time: "07:30 - 08:20"
        }
      ]
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: [
        {
          subject: "Química 2 - 187",
          size: 2,
          teachers: [
            "Edvaldo Luis Rossini"
          ],
          classroom: "",
          students: "EIN2020-2ANO",
          time: "07:30 - 08:20"
        },
        {
          subject: "Eletrônica - 1554",
          size: 2,
          teachers: [
            "Tiago Henrique dos Santos"
          ],
          classroom: "",
          students: "EIN2020-2ANO",
          time: "09:25 - 10:15"
        },
        {
          subject: "Eletrônica - 1554",
          size: 1,
          teachers: [
            "Tiago Henrique dos Santos"
          ],
          classroom: "",
          students: "EIN2020-2ANO",
          time: "11:05 - 11:55"
        }
      ]
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: [
        {
          subject: "Lingua Estrangeira Moderna 1- Inglês - 179",
          size: 1,
          teachers: [
            "Adrian Lincoln Ferreira Clarindo"
          ],
          classroom: "",
          students: "EIN2020-2ANO",
          time: "07:30 - 08:20"
        },
        {
          subject: "História 2 - 178",
          size: 1,
          teachers: [
            "Amilcar Machado Profeta Filho"
          ],
          classroom: "",
          students: "EIN2020-2ANO",
          time: "09:25 - 10:15"
        },
        {
          subject: "Física 2 - 175",
          size: 1,
          teachers: [
            "Bruno Garcia Bonfim"
          ],
          classroom: "",
          students: "EIN2020-2ANO",
          time: "08:20 - 09:10"
        },
        {
          subject: "Cálculo Mecânico - 154",
          size: 2,
          teachers: [
            "Luiz Inácio Chaves"
          ],
          classroom: "",
          students: "EIN2020-2ANO",
          time: "10:15 - 11:05"
        }
      ]
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:10 - 09:25",
      size: 15
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "11:55 - 13:10",
      size: 75
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "14:50 - 15:05",
      size: 15
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 19:00",
      size: 135
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "20:40 - 21:00",
      size: 20
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# EIN2020-2ANO

<div>
    {
        <Grid
            title={data.title} 
            weekClasses={data.weekClasses} 
            time={data.time}
        />
    }
</div>